--- a/index.html
+++ b/index.html
@@ -1,74 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>BlackBird Co.</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="icon" type="image/png" href="images/favicon.png">
-  </head>
-</html>
-<body>
-  <header class="bird-box">
-    <div class="back-bird"></div>
-    <div class="logo"></div>
-    <div class="fore-bird"></div>
-  </header>
-  <section class="content">
-    <article>
-      <h1>Anna'a Amazing Antiques</h1>
-      <hr>
-      <p>I ,Karanbir Singh Chahal am making a website for my sister. I intend it to be a fashion blog which will also showcase all her latest designs.The website will be made using the MEAN stack using sass and jade as html/css counterparts. I will also introduce a mechanism for caching using redis and a machine learning component for detecting what the user wants to see? I will update this as I go on:)</p>
-      <hr>
-      <div class="clothes-pics">
-        <div class="row img-row">
-          <figure class="columns four"><img src="images/model1.jpg">
-            <figcaption>BlackBird Sweater - <strong>$135</strong></figcaption>
-          </figure>
-          <figure class="columns four"><img src="images/model2.jpg">
-            <figcaption>BlackBird Trousers - <strong>$135</strong></figcaption>
-          </figure>
-          <figure class="columns four"><img src="images/model3.jpg">
-            <figcaption>BlackBird Jacket - <strong>$135</strong></figcaption>
-          </figure>
-        </div>
-        <div class="row img-row">
-          <figure class="columns four"><img src="images/model2.jpg">
-            <figcaption>BlackBird Trousers - <strong>$135</strong></figcaption>
-          </figure>
-          <figure class="columns four"><img src="images/model3.jpg">
-            <figcaption>BlackBird Jacket - <strong>$135</strong></figcaption>
-          </figure>
-          <figure class="columns four"><img src="images/model1.jpg">
-            <figcaption>BlackBird Sweater - <strong>$135</strong></figcaption>
-          </figure>
-        </div>
-        <div class="row img-row">
-          <figure class="columns four"><img src="images/model3.jpg">
-            <figcaption>BlackBird Jacket - <strong>$135</strong></figcaption>
-          </figure>
-          <figure class="columns four"><img src="images/model1.jpg">
-            <figcaption>BlackBird Sweater - <strong>$135</strong></figcaption>
-          </figure>
-          <figure class="columns four"><img src="images/model2.jpg">
-            <figcaption>BlackBird Trousers - <strong>$135</strong></figcaption>
-          </figure>
-        </div>
-      </div>
-      <h1>Clothing Store</h1>
-      <hr>
-      <p>I will also introduce a mechanism for caching using redis and a machine learning component for detecting what the user wants to see? I will update this as I go on:)</p>
-      <hr>
-      <div class="large-window"> 
-        <div class="window-tint">
-          <div class="promo-text">Fall Suits<strong>from $99       </strong></div>
-        </div>
-      </div>
-    </article>
-    <div style="height:2000px"></div>
-  </section>
-  <script src="js/jquery.js"></script>
-  <script src="js/function.js"></script>
-</body>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>BlackBird Co.</title><meta name="description" content=""><meta name="author" content=""><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="css/index.css"><link rel="icon" type="image/png" href="images/favicon.png"></head></html><body><header class="bird-box"><div class="back-bird"></div><div class="logo"></div><div class="fore-bird"></div></header><section class="content"><article><h1>Anna'a Amazing Antiques</h1><hr><p>I ,Karanbir Singh Chahal am making a website for my sister. I intend it to be a fashion blog which will also showcase all her latest designs.The website will be made using the MEAN stack using sass and jade as html/css counterparts. I will also introduce a mechanism for caching using redis and a machine learning component for detecting what the user wants to see? I will update this as I go on:)</p><hr><div class="clothes-pics"><div class="row img-row"><figure class="columns four"><img src="images/model1.jpg"><figcaption>BlackBird Sweater - <strong>$135</strong></figcaption></figure><figure class="columns four"><img src="images/model2.jpg"><figcaption>BlackBird Trousers - <strong>$135</strong></figcaption></figure><figure class="columns four"><img src="images/model3.jpg"><figcaption>BlackBird Jacket - <strong>$135</strong></figcaption></figure></div><div class="row img-row"><figure class="columns four"><img src="images/model2.jpg"><figcaption>BlackBird Trousers - <strong>$135</strong></figcaption></figure><figure class="columns four"><img src="images/model3.jpg"><figcaption>BlackBird Jacket - <strong>$135</strong></figcaption></figure><figure class="columns four"><img src="images/model1.jpg"><figcaption>BlackBird Sweater - <strong>$135</strong></figcaption></figure></div><div class="row img-row"><figure class="columns four"><img src="images/model3.jpg"><figcaption>BlackBird Jacket - <strong>$135</strong></figcaption></figure><figure class="columns four"><img src="images/model1.jpg"><figcaption>BlackBird Sweater - <strong>$135</strong></figcaption></figure><figure class="columns four"><img src="images/model2.jpg"><figcaption>BlackBird Trousers - <strong>$135</strong></figcaption></figure></div></div><h1>Clothing Store</h1><hr><p>I will also introduce a mechanism for caching using redis and a machine learning component for detecting what the user wants to see? I will update this as I go on:)</p><hr><div class="large-window"> <div class="window-tint"><div class="promo-text">Fall Suits<strong><span>from</span> $99  </strong><a href="" class="window-cta">Shop Now  </a></div></div></div><h1>Clothing Store</h1><hr><p>I will also introduce a mechanism for caching using redis and a machine learning component for detecting what the user wants to see? I will update this as I go on:)</p><hr><div class="blog-posts row"><div class="post columns four post-1"><h5>Post title</h5><img src="images/posts/one.jpg"><p>BOOM BOOM STAR WARS BIG BOOKS AND BRESENHAM FUNCTION FOR LINE DRAWING </p><p><a href="" class="button">Read More</a></p></div><div class="post columns four post-2"><h5>Post title</h5><img src="images/posts/two.jpg"><p>BOOM BOOM STAR WARS BIG BOOKS AND BRESENHAM FUNCTION FOR LINE DRAWING </p><p><a href="" class="button">Read More </a></p></div><div class="post columns four post-3"><h5>Post title</h5><img src="images/posts/three.jpg"><p>BOOM BOOM STAR WARS BIG BOOKS AND BRESENHAM FUNCTION FOR LINE DRAWING </p><p><a href="" class="button">Read More          </a></p></div></div></article></section><footer><div class="row footer-stuff"><div class="columns three"><strong>FIND US ON</strong><ul><li><a href="">Twitter</a></li><li><a href="">Twitter</a></li><li><a href="">Pinterest</a></li><li><a href="">Instagram</a></li></ul></div><div class="columns three"><strong>OTHER SHOPS</strong><ul><li><a href="">Red Robin</a></li><li><a href="">Emerald Eagle</a></li><li><a href="">Crimson Crane</a></li><li><a href="">Auburn Abbot</a></li></ul></div><div class="columns six"><p><strong>Sign Up For Our NewsLetter</strong> I hope I become a really good web designer/developer</p><form class="row"><div class="columns eight"><input type="email" placeholder="Your Email" class="u-full-width"></div><div class="columns four"><input type="submit" class="button-primary"></div></form></div></div></footer><script src="js/jquery.js"></script><script src="js/function.js"></script></body>
